gr-sys/bindings/gkscore.rs

/* automatically generated by rust-bindgen 0.68.1 */

extern "C" {
    pub static mut gks_errno: ::core::ffi::c_int;
}
pub fn FIX_COLORIND(c: ::core::ffi::c_int) -> ::core::ffi::c_int {
    if c < MAX_COLOR {
        c
    } else {
        MAX_COLOR - 1
    }
}


pub const GRALGKS: ::core::ffi::c_int = 3;
pub const GLIGKS: ::core::ffi::c_int = 4;
pub const GKS5: ::core::ffi::c_int = 5;
pub const MAX_WS: ::core::ffi::c_int = 16;
pub const MAX_TNR: ::core::ffi::c_int = 9;
pub const MAX_COLOR: ::core::ffi::c_int = 1256;
pub const OPEN_GKS: ::core::ffi::c_int = 0;
pub const CLOSE_GKS: ::core::ffi::c_int = 1;
pub const OPEN_WS: ::core::ffi::c_int = 2;
pub const CLOSE_WS: ::core::ffi::c_int = 3;
pub const ACTIVATE_WS: ::core::ffi::c_int = 4;
pub const DEACTIVATE_WS: ::core::ffi::c_int = 5;
pub const CLEAR_WS: ::core::ffi::c_int = 6;
pub const REDRAW_SEG_ON_WS: ::core::ffi::c_int = 7;
pub const UPDATE_WS: ::core::ffi::c_int = 8;
pub const SET_DEFERRAL_STATE: ::core::ffi::c_int = 9;
pub const MESSAGE: ::core::ffi::c_int = 10;
pub const ESCAPE: ::core::ffi::c_int = 11;
pub const POLYLINE: ::core::ffi::c_int = 12;
pub const POLYMARKER: ::core::ffi::c_int = 13;
pub const TEXT: ::core::ffi::c_int = 14;
pub const FILLAREA: ::core::ffi::c_int = 15;
pub const CELLARRAY: ::core::ffi::c_int = 16;
pub const GDP: ::core::ffi::c_int = 17;
pub const SET_PLINE_INDEX: ::core::ffi::c_int = 18;
pub const SET_PLINE_LINETYPE: ::core::ffi::c_int = 19;
pub const SET_PLINE_LINEWIDTH: ::core::ffi::c_int = 20;
pub const SET_PLINE_COLOR_INDEX: ::core::ffi::c_int = 21;
pub const SET_PMARK_INDEX: ::core::ffi::c_int = 22;
pub const SET_PMARK_TYPE: ::core::ffi::c_int = 23;
pub const SET_PMARK_SIZE: ::core::ffi::c_int = 24;
pub const SET_PMARK_COLOR_INDEX: ::core::ffi::c_int = 25;
pub const SET_TEXT_INDEX: ::core::ffi::c_int = 26;
pub const SET_TEXT_FONTPREC: ::core::ffi::c_int = 27;
pub const SET_TEXT_EXPFAC: ::core::ffi::c_int = 28;
pub const SET_TEXT_SPACING: ::core::ffi::c_int = 29;
pub const SET_TEXT_COLOR_INDEX: ::core::ffi::c_int = 30;
pub const SET_TEXT_HEIGHT: ::core::ffi::c_int = 31;
pub const SET_TEXT_UPVEC: ::core::ffi::c_int = 32;
pub const SET_TEXT_PATH: ::core::ffi::c_int = 33;
pub const SET_TEXT_ALIGN: ::core::ffi::c_int = 34;
pub const SET_FILL_INDEX: ::core::ffi::c_int = 35;
pub const SET_FILL_INT_STYLE: ::core::ffi::c_int = 36;
pub const SET_FILL_STYLE_INDEX: ::core::ffi::c_int = 37;
pub const SET_FILL_COLOR_INDEX: ::core::ffi::c_int = 38;
pub const SET_ASF: ::core::ffi::c_int = 41;
pub const SET_COLOR_REP: ::core::ffi::c_int = 48;
pub const SET_WINDOW: ::core::ffi::c_int = 49;
pub const SET_VIEWPORT: ::core::ffi::c_int = 50;
pub const SELECT_XFORM: ::core::ffi::c_int = 52;
pub const SET_CLIPPING: ::core::ffi::c_int = 53;
pub const SET_WS_WINDOW: ::core::ffi::c_int = 54;
pub const SET_WS_VIEWPORT: ::core::ffi::c_int = 55;
pub const CREATE_SEG: ::core::ffi::c_int = 56;
pub const CLOSE_SEG: ::core::ffi::c_int = 57;
pub const DELETE_SEG: ::core::ffi::c_int = 58;
pub const ASSOC_SEG_WITH_WS: ::core::ffi::c_int = 61;
pub const COPY_SEG_TO_WS: ::core::ffi::c_int = 62;
pub const SET_SEG_XFORM: ::core::ffi::c_int = 64;
pub const INITIALIZE_LOCATOR: ::core::ffi::c_int = 69;
pub const REQUEST_LOCATOR: ::core::ffi::c_int = 81;
pub const REQUEST_STROKE: ::core::ffi::c_int = 82;
pub const REQUEST_CHOICE: ::core::ffi::c_int = 84;
pub const REQUEST_STRING: ::core::ffi::c_int = 86;
pub const GET_ITEM: ::core::ffi::c_int = 102;
pub const READ_ITEM: ::core::ffi::c_int = 103;
pub const INTERPRET_ITEM: ::core::ffi::c_int = 104;
pub const EVAL_XFORM_MATRIX: ::core::ffi::c_int = 105;
pub const SET_ENCODING: ::core::ffi::c_int = 106;
pub const INQ_ENCODING: ::core::ffi::c_int = 107;
pub const SET_RESAMPLE_METHOD: ::core::ffi::c_int = 108;
pub const SET_RESIZE_BEHAVIOUR: ::core::ffi::c_int = 109;
pub const INQ_TEXT: ::core::ffi::c_int = 110;
pub const SET_TEXT_SLANT: ::core::ffi::c_int = 200;
pub const DRAW_IMAGE: ::core::ffi::c_int = 201;
pub const SET_SHADOW: ::core::ffi::c_int = 202;
pub const SET_TRANSPARENCY: ::core::ffi::c_int = 203;
pub const SET_COORD_XFORM: ::core::ffi::c_int = 204;
pub const CONFIGURE_WS: ::core::ffi::c_int = 205;
pub const SET_BORDER_WIDTH: ::core::ffi::c_int = 206;
pub const SET_BORDER_COLOR_INDEX: ::core::ffi::c_int = 207;
pub const SELECT_CLIP_XFORM: ::core::ffi::c_int = 208;
pub const INQ_WS_STATE: ::core::ffi::c_int = 209;
pub const SAMPLE_LOCATOR: ::core::ffi::c_int = 210;
pub const BEGIN_SELECTION: ::core::ffi::c_int = 250;
pub const END_SELECTION: ::core::ffi::c_int = 251;
pub const MOVE_SELECTION: ::core::ffi::c_int = 252;
pub const RESIZE_SELECTION: ::core::ffi::c_int = 253;
pub const INQ_BBOX: ::core::ffi::c_int = 254;
pub const GKS_SET_BBOX_CALLBACK: ::core::ffi::c_int = 260;
pub const GKS_CANCEL_BBOX_CALLBACK: ::core::ffi::c_int = 261;
pub const ENCODING_LATIN1: ::core::ffi::c_int = 300;
pub const ENCODING_UTF8: ::core::ffi::c_int = 301;
pub const MAX_ATTRIBUTE_FCTID: ::core::ffi::c_int = 55;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct gks_state_list_t {
    pub lindex: ::core::ffi::c_int,
    pub ltype: ::core::ffi::c_int,
    pub lwidth: f64,
    pub plcoli: ::core::ffi::c_int,
    pub mindex: ::core::ffi::c_int,
    pub mtype: ::core::ffi::c_int,
    pub mszsc: f64,
    pub pmcoli: ::core::ffi::c_int,
    pub tindex: ::core::ffi::c_int,
    pub txfont: ::core::ffi::c_int,
    pub txprec: ::core::ffi::c_int,
    pub chxp: f64,
    pub chsp: f64,
    pub txcoli: ::core::ffi::c_int,
    pub chh: f64,
    pub chup: [f64; 2usize],
    pub txp: ::core::ffi::c_int,
    pub txal: [::core::ffi::c_int; 2usize],
    pub findex: ::core::ffi::c_int,
    pub ints: ::core::ffi::c_int,
    pub styli: ::core::ffi::c_int,
    pub facoli: ::core::ffi::c_int,
    pub window: [[f64; 4usize]; 9usize],
    pub viewport: [[f64; 4usize]; 9usize],
    pub cntnr: ::core::ffi::c_int,
    pub clip: ::core::ffi::c_int,
    pub opsg: ::core::ffi::c_int,
    pub mat: [[f64; 2usize]; 3usize],
    pub asf: [::core::ffi::c_int; 13usize],
    pub wiss: ::core::ffi::c_int,
    pub version: ::core::ffi::c_int,
    pub fontfile: ::core::ffi::c_int,
    pub input_encoding: ::core::ffi::c_int,
    pub txslant: f64,
    pub shoff: [f64; 2usize],
    pub blur: f64,
    pub alpha: f64,
    pub a: [f64; 9usize],
    pub b: [f64; 9usize],
    pub c: [f64; 9usize],
    pub d: [f64; 9usize],
    pub resample_method: ::core::ffi::c_uint,
    pub bwidth: f64,
    pub bcoli: ::core::ffi::c_int,
    pub clip_tnr: ::core::ffi::c_int,
    pub resize_behaviour: ::core::ffi::c_int,
    pub aspect_ratio: f64,
    pub callback: ::core::option::Option<
        unsafe extern "C" fn(arg1: *const ::core::ffi::c_char) -> *mut ::core::ffi::c_char,
    >,
    pub debug: ::core::ffi::c_int,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ws_list_t {
    pub wkid: ::core::ffi::c_int,
    pub path: *mut ::core::ffi::c_char,
    pub wtype: ::core::ffi::c_int,
    pub conid: ::core::ffi::c_int,
    pub ptr: *mut ::core::ffi::c_void,
    pub vp: [f64; 4usize],
    pub name: *mut ::core::ffi::c_char,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ws_descr_t {
    pub wtype: ::core::ffi::c_int,
    pub dcunit: ::core::ffi::c_int,
    pub sizex: f64,
    pub sizey: f64,
    pub unitsx: ::core::ffi::c_int,
    pub unitsy: ::core::ffi::c_int,
    pub wscat: ::core::ffi::c_int,
    pub type_: *mut ::core::ffi::c_char,
    pub env: *mut ::core::ffi::c_char,
    pub name: *mut ::core::ffi::c_char,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct gks_display_list_t {
    pub state: ::core::ffi::c_int,
    pub buffer: *mut ::core::ffi::c_char,
    pub size: ::core::ffi::c_int,
    pub nbytes: ::core::ffi::c_int,
    pub position: ::core::ffi::c_int,
    pub empty: ::core::ffi::c_int,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct gks_ws_state_t {
    pub width: ::core::ffi::c_int,
    pub height: ::core::ffi::c_int,
    pub device_pixel_ratio: f64,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct gks_locator_t {
    pub x: f64,
    pub y: f64,
    pub status: ::core::ffi::c_int,
}
extern "C" {
    pub fn gks_malloc(size: ::core::ffi::c_int) -> *mut ::core::ffi::c_char;
}
extern "C" {
    pub fn gks_realloc(
        ptr: *mut ::core::ffi::c_void,
        size: ::core::ffi::c_int,
    ) -> *mut ::core::ffi::c_char;
}
extern "C" {
    pub fn gks_free(ptr: *mut ::core::ffi::c_void);
}
extern "C" {
    pub fn gks_strdup(str_: *const ::core::ffi::c_char) -> *mut ::core::ffi::c_char;
}
extern "C" {
    pub fn gks_perror(arg1: *const ::core::ffi::c_char, ...);
}
extern "C" {
    pub fn gks_resample(
        source_image: *const ::core::ffi::c_uchar,
        target_image: *mut ::core::ffi::c_uchar,
        source_width: usize,
        source_height: usize,
        target_width: usize,
        target_height: usize,
        stride: usize,
        swapx: ::core::ffi::c_int,
        swapy: ::core::ffi::c_int,
        resample_method: ::core::ffi::c_uint,
    );
}
extern "C" {
    pub fn gks_getenv(env: *const ::core::ffi::c_char) -> *const ::core::ffi::c_char;
}
extern "C" {
    pub fn gks_dl_write_item(
        d: *mut gks_display_list_t,
        fctid: ::core::ffi::c_int,
        dx: ::core::ffi::c_int,
        dy: ::core::ffi::c_int,
        dimx: ::core::ffi::c_int,
        ia: *mut ::core::ffi::c_int,
        lr1: ::core::ffi::c_int,
        r1: *mut f64,
        lr2: ::core::ffi::c_int,
        r2: *mut f64,
        lc: ::core::ffi::c_int,
        c: *mut ::core::ffi::c_char,
        gkss: *mut gks_state_list_t,
    );
}
extern "C" {
    pub fn gks_dl_read_item(
        dl: *mut ::core::ffi::c_char,
        gkss: *mut *mut gks_state_list_t,
        fn_: ::core::option::Option<
            unsafe extern "C" fn(
                fctid: ::core::ffi::c_int,
                dx: ::core::ffi::c_int,
                dy: ::core::ffi::c_int,
                dimx: ::core::ffi::c_int,
                ia: *mut ::core::ffi::c_int,
                lr1: ::core::ffi::c_int,
                r1: *mut f64,
                lr2: ::core::ffi::c_int,
                r2: *mut f64,
                lc: ::core::ffi::c_int,
                chars: *mut ::core::ffi::c_char,
                ptr: *mut *mut ::core::ffi::c_void,
            ),
        >,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gks_x11_plugin(
        fctid: ::core::ffi::c_int,
        dx: ::core::ffi::c_int,
        dy: ::core::ffi::c_int,
        dimx: ::core::ffi::c_int,
        i_arr: *mut ::core::ffi::c_int,
        len_f_arr_1: ::core::ffi::c_int,
        f_arr_1: *mut f64,
        len_f_arr_2: ::core::ffi::c_int,
        f_arr_2: *mut f64,
        len_c_arr: ::core::ffi::c_int,
        c_arr: *mut ::core::ffi::c_char,
        ptr: *mut *mut ::core::ffi::c_void,
    );
}
extern "C" {
    pub fn gks_gs_plugin(
        fctid: ::core::ffi::c_int,
        dx: ::core::ffi::c_int,
        dy: ::core::ffi::c_int,
        dimx: ::core::ffi::c_int,
        i_arr: *mut ::core::ffi::c_int,
        len_f_arr_1: ::core::ffi::c_int,
        f_arr_1: *mut f64,
        len_f_arr_2: ::core::ffi::c_int,
        f_arr_2: *mut f64,
        len_c_arr: ::core::ffi::c_int,
        c_arr: *mut ::core::ffi::c_char,
        ptr: *mut *mut ::core::ffi::c_void,
    );
}
extern "C" {
    pub fn gks_gtk_plugin(
        fctid: ::core::ffi::c_int,
        dx: ::core::ffi::c_int,
        dy: ::core::ffi::c_int,
        dimx: ::core::ffi::c_int,
        i_arr: *mut ::core::ffi::c_int,
        len_f_arr_1: ::core::ffi::c_int,
        f_arr_1: *mut f64,
        len_f_arr_2: ::core::ffi::c_int,
        f_arr_2: *mut f64,
        len_c_arr: ::core::ffi::c_int,
        c_arr: *mut ::core::ffi::c_char,
        ptr: *mut *mut ::core::ffi::c_void,
    );
}
